--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.pythonPath": "venv/bin/python",
-    "python.formatting.provider": "black"
+    "python.formatting.provider": "yapf",
+    "python.linting.enabled": true
 }
