Add prefix to application routes -Fix influx addition for null redis entry -Update requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-eventlet
 flask
-flask-socketio
-flask-bootstrap
-flask-mqtt
-mattermostdriver
 flask-redis
 flask-restful
 flask-influxdb
+flask-pymongo
+flask-httpauth
+mattermostdriver
+python-ldap
+gunicorn
